added state endpoint
